# reverb

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  COMPATIBILITY.md  Dockerfile  Dockerfile.cli  Makefile  README.md  RUNBOOK.md  go.mod  go.sum  package-lock.json  simplification_plan.md
.github/workflows/: ci.yml  example-openai-chat.yml  openapi.yml  release-cli.yml  sdk-js.yml  sdk-python.yml
.omc/: project-memory.json
.omc/handoffs/: team-plan.md
.omc/research/: code-review.md  gap-analysis.md  gemini-prompt.md  review-prompt.md
.omc/sessions/: 09794b24-068f-47a2-b1ce-2916a9eda61e.json
.omc/state/: mission-state.json
cmd/reverb/: main.go  main_test.go  proxy_openai.go  proxy_openai_test.go
cmd/reverb-cli/: cmd_stubs.go  cmd_wired.go  helpers.go  integration_test.go  main.go  main_test.go  wire.go  wire_test.go
docs/: cli.md  improvement_plan2.md
examples/basic/: Dockerfile  README.md  main.go
examples/openai-chat/: README.md  main.go
examples/openai-proxy/: README.md  main.go
examples/pii-redaction/: main.go
examples/semantic-cache/: Dockerfile  README.md  docker-compose.yml  main.go
examples/stale-knowledge/: Dockerfile  README.md  docker-compose.yml  main.go
internal/clock/: clock.go
internal/hashutil/: hash.go  hash_test.go
internal/retry/: retry.go
openapi/: index.html  v1.yaml
pkg/auth/: auth.go  auth_test.go  grpc.go  grpc_test.go  http.go  http_test.go
pkg/limiter/: limiter.go
pkg/lineage/: invalidator.go  invalidator_test.go
pkg/metrics/: metrics.go  tracing.go  (+2 more)
scripts/: lint-docs.sh
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/openapi-generator/: config.yaml
sdk/python/reverb/: __init__.py  _types.py  client.py  decorators.py  errors.py
sdk/python/scripts/: smoke_test.py
sdk/python/tests/: test_client.py
specs/: mission.md  roadmap.md  tech-stack.md
state/: cancel-signal-state.json
(+73 files in other folders)
