[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "reverb"
version = "0.1.0rc0"
description = "Python client for Reverb, a semantic response cache for LLMs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Reverb maintainers", email = "noreply@example.com" }]
keywords = ["llm", "cache", "semantic-cache", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
all = ["openai>=1.40", "anthropic>=0.34"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/nobelk/reverb"
Documentation = "https://nobelk.github.io/reverb/"
Repository = "https://github.com/nobelk/reverb"
Issues = "https://github.com/nobelk/reverb/issues"

[tool.hatch.build.targets.wheel]
packages = ["reverb"]

[tool.hatch.build.targets.sdist]
include = ["reverb", "README.md", "LICENSE", "openapi-generator"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unreachable = true
